# voidscript

./: .clangd  .gitignore  .mailmap  AUDIT.md  BUGS.md  CLAUDE.md  CMakeLists.txt  CODEX.md  README.md  REFACTORING.md  check_unsoported_features.sh  codex.md  comprehensive_this_test.vs  constructor_test_output.txt  debug_access_control.vs  debug_access_control_test.vs  debug_enum_assign.vs  debug_enum_type.vs  debug_function_scope.vs  debug_imagick_constructor.vs  debug_member_access.vs  debug_member_access_detailed.vs  debug_scope.vs  debug_scope_context.vs  final_access_control_test.vs  fix_commit_messages.sh  include_test.vs  include_test_1.vs  isolated_test.vs  scope_stack_debug.vs  simple_access_test.vs  simple_private_test.vs  simple_scope_test.vs  temp_test.vs  test.vs  test_access_control_final.vs  test_access_control_validation.vs  test_access_diagnosis.vs  test_access_private_property.vs  test_bare_this_error.vs  (+49 more)
.clinerules/: build-and-test.md
.codex/: method_call_fix_roadmap.md
.github/: copilot-instructions.md
Modules/Archive/: CMakeLists.txt  module.cmake
Modules/Archive/src/: ArchiveModule.cpp  ArchiveModule.hpp  PluginInit.cpp
Modules/Curl/: CMakeLists.txt  README.md  module.cmake
Modules/Curl/src/: CurlModule.cpp  CurlModule.hpp  PluginInit.cpp
Modules/Curl/test_scripts/: curl_delete.vs  curl_get.vs  curl_legacy_test.vs  curl_oop_advanced.vs  curl_oop_basic.vs  curl_oop_errors.vs  curl_oop_integration.vs  curl_oop_minimal.vs  curl_oop_simple.vs  curl_performance_test.vs  curl_post.vs  curl_put.vs
Modules/CurlModule/: CMakeLists.txt  README.md
Modules/CurlModule/src/: CurlModule.cpp  CurlModule.hpp  PLuginInit.hpp  PluginInit.cpp  PluginInit.h
Modules/CurlModule/test_scripts/: curl_get.vs  curl_post.vs
Modules/Format/: CMakeLists.txt  module.cmake
Modules/Format/src/: FormatModule.cpp  FormatModule.hpp  PluginInit.cpp
Modules/FormatModule/: CMakeLists.txt
Modules/FormatModule/src/: FormatModule.cpp  FormatModule.hpp  PluginInit.h
Modules/FormatModule/test_scripts/: format.vs
Modules/Hash/: CMakeLists.txt  module.cmake
Modules/Hash/src/: HashModule.cpp  HashModule.hpp  PluginInit.cpp
Modules/Imagick/: CMakeLists.txt  module.cmake
Modules/Imagick/src/: ImagickModule.cpp  ImagickModule.hpp  PluginInit.cpp
Modules/ImagickModule/: CMakeLists.txt
Modules/ImagickModule/src/: PluginInit.cpp  PluginInit.h
Modules/ImagickModule/test_scripts/: image_crop.vs  image_resize.vs
Modules/MariaDBModule/: CMakeLists.txt  README.md
Modules/MariaDBModule/src/: MariaDBModule.cpp  MariaDBModule.hpp  PLuginInit.hpp  PluginInit.cpp
Modules/MariaDb/: API_REFERENCE.md  CMakeLists.txt  MIGRATION_GUIDE.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_SPECIFICATION.md  module.cmake  test_comprehensive_mariadb.vs  test_phase1.vs  test_phase2_security.vs  test_phase3_query_execution.vs  test_phase4_transactions.vs
Modules/MariaDb/src/: MariaDBModule.cpp  MariaDBModule.hpp  PluginInit.cpp
Modules/MariaDb/test_scripts/: mariadb_comprehensive_test.vs  mariadb_connection_test.vs  mariadb_error_handling_test.vs  mariadb_query_test.vs  mariadb_ssl_test.vs
Modules/Memcached/: CMakeLists.txt  module.cmake
Modules/Memcached/src/: MemcachedModule.cpp  MemcachedModule.hpp  PluginInit.cpp  PluginInit.h
Modules/Memcached/test_scripts/: memcached_advanced.vs  memcached_basic.vs  memcached_error.vs  memcached_legacy.vs  memcached_oop.vs
Modules/MongoDb/: CMakeLists.txt  README.md  module.cmake
Modules/MongoDb/src/: MongoDBModule.cpp  MongoDBModule.hpp  PluginInit.cpp  PluginInit.h
Modules/MongoDb/test_scripts/: mongodb_bulk.vs  mongodb_collection.vs  mongodb_connection.vs  mongodb_crud.vs  mongodb_error.vs  mongodb_query.vs
Modules/PixelArt/: CMakeLists.txt  README.md  module.cmake
Modules/PixelArt/src/: PixelArtModule.cpp  PixelArtModule.hpp  PluginInit.cpp
Modules/StableDiffusion/: CMakeLists.txt  README.md  module.cmake
Modules/StableDiffusion/src/: PluginInit.cpp  SDModule.cpp  SDModule.hpp
Modules/Xml2/: CMakeLists.txt  module.cmake
Modules/Xml2/src/: PluginInit.cpp  XmlModule.cpp  XmlModule.hpp
Modules/Xml2/test_scripts/: parsexml.vs  simple_xml_test.vs  xml_basic_test.vs  xml_phase1_simple_test.vs  xml_phase1_test.vs  xml_xpath_advanced_test.vs  xml_xpath_final_test.vs  xml_xpath_minimal_test.vs  xml_xpath_phase2_test.vs  xml_xpath_simple_test.vs  xml_xpath_test.vs  xpath_basic_test.vs  xpath_test.vs
cli/: main.cpp
cmake/: AppVersion.cmake  catch2.cmake  options.h.in
compiler/: CMakeLists.txt  README.md  main.cpp
docs/: ArrayModule.md  ArraySyntax.md  ClassSyntax.md  ClassSystemRedesign.md  FileModule.md  JsonModule.md  ModuleHelperModule.md  PrintModule.md  StringModule.md  VariableHelpersModule.md  VariableTypes.md  VoidScript-Limitations.md
fastcgi/: CMakeLists.txt
fastcgi/assets/: voidscript_fcgi.conf.in
fastcgi/docs/: README.md
fastcgi/src/: main.cpp
implement_class/: 1_step.md  2_step.md
include/: BaseSymbol.hpp  FunctionSymbol.hpp  SymbolContainer.hpp  SymbolFactory.hpp  SymbolTable.hpp  VariableSymbol.hpp  VariableTypes.hpp
src/: !NameSpaceManager.hpp  BaseException.hpp  Lexer.cpp  (+16 more)
tests/compiler/: CMakeLists.txt  README.md  arrays_test  arrays_test_debug  arrays_test_debug2  arrays_test_final  arrays_test_fixed  arrays_test_fixed.c  arrays_test_working  compiler_basic_tests.cpp  full_test_output.txt  full_test_results.txt  run_compiler_tests.sh  run_compiler_tests_no_exit.sh  test_basic_vars  test_debug  verify_test_setup.sh
tests/compiler/expected_outputs/: 01_basic_variables.txt  02_basic_functions.txt  03_control_flow.txt  04_arrays.txt  05_classes.txt  06_objects.txt  07_constants.txt  10_comprehensive.txt
tests/compiler/test_scripts/: 01_basic_variables  01_basic_variables.vs  02_basic_functions.vs  03_control_flow  03_control_flow.vs  04_arrays  04_arrays.vs  05_classes  05_classes.vs  06_objects  06_objects.vs  07_constants.vs  08_syntax_error.vs  09_type_error.vs  10_comprehensive.vs
(+368 files in other folders)
